ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nitter
  labels:
    app: nitter
spec:
  tls:
  - hosts:
      - t.beanteam.org
    secretName: beanteam-tls
  rules:
  - host: t.beanteam.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nitter
            port:
              number: 80
